style: Add errorprone warnings. (#592)
* style: Add errorprone warnings.

Related to #590.

* 🦉 Updates from OwlBot post-processor

See https://github.com/googleapis/repo-automation-bots/blob/main/packages/owl-bot/README.md

Co-authored-by: Owl Bot <gcf-owl-bot[bot]@users.noreply.github.com>
Co-authored-by: kolea2 <45548808+kolea2@users.noreply.github.com>